--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,36 +13,33 @@
 
     <TextView
         android:id="@+id/tv"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="영화 예매 시스템" />
-
-    <TableLayout
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tv"
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableRow>
-            <Button
-                android:id="@+id/signup"
-                android:text="회원가입" />
-            <Button
-                android:id="@+id/login"
-                android:text="로그인"/>
-        </TableRow>
-        <TableRow>
-            <Button
-                android:text="상영중인 영화정보"
-                android:id="@+id/info"/>
-            <Button
-                android:text="영화 예매"
-                android:id="@+id/reserve"/>
-        </TableRow>
-        <TableRow>
-            <Button
-                android:text="예매 확인"
-                android:id="@+id/check"/>
-        </TableRow>
-    </TableLayout>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/signup"
+        android:text="회원가입" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/login"
+        android:text="로그인"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="상영중인 영화정보"
+        android:id="@+id/info"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="영화 예매"
+        android:id="@+id/reserve"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="예매 확인"
+        android:id="@+id/check"/>
+</LinearLayout>
