--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/signup"
-        android:text="회원가입" />
+        android:text="회원가입"
+        android:onClick="signup"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
