--- a/app/src/main/res/layout/join.xml
+++ b/app/src/main/res/layout/join.xml
@@ -10,6 +10,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/id"
             android:hint="아이디를 입력하세요"/>
     </TableRow>
     <TableRow>
@@ -21,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/password1"
             android:hint="비밀번호를 입력하세요"/>
     </TableRow>
     <TableRow>
@@ -32,11 +34,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/password2"
             android:hint="비밀번호를 다시한번 입력하세요"/>
     </TableRow>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="회원가입"
+        android:id="@+id/submit"
         android:onClick="submit"/>
 </TableLayout>
