--- a/app/src/main/res/layout/join.xml
+++ b/app/src/main/res/layout/join.xml
@@ -10,6 +10,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/id"
             android:hint="아이디를 입력하세요"/>
     </TableRow>
     <TableRow>
@@ -32,11 +33,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/password"
             android:hint="비밀번호를 다시한번 입력하세요"/>
     </TableRow>
     <Button
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:onClick="submit"/>
+        android:text="회원가입" />
 </TableLayout>
