수정 삭제 구현-삭제시 남아있고 수정시 반영안됨 버그

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,14 +61,21 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="회원가입 DB CLEAR"
+        android:text="MEMBER DB CLEAR"
         android:id="@+id/idClear"
         android:onClick="idClear"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DB 전체 초기화"
+        android:text="MOVIE DB RESET"
+        android:id="@+id/movieClear"
+        android:onClick="movieClear"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ALL DB RESET"
         android:id="@+id/Clear"
         android:onClick="Clear"/>
 </LinearLayout>
