--- a/app/src/main/res/layout/movie_modify.xml
+++ b/app/src/main/res/layout/movie_modify.xml
@@ -1,74 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/poster"
-        android:layout_width="match_parent"
-        android:layout_height="250dp" />
+    android:layout_height="match_parent">
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TableRow>
             <TextView
-                android:text="등급"/>
+                android:text="제목"/>
+            <EditText
+                android:id="@+id/title"/>
+        </TableRow>
+        <TableRow>
             <TextView
+                android:text="포스터"/>
+            <EditText
+                android:id="@+id/poster"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:text="등급"/>
+            <EditText
                 android:id="@+id/grade"/>
         </TableRow>
         <TableRow>
             <TextView
                 android:text="감독"/>
-            <TextView
+            <EditText
                 android:id="@+id/director"/>
         </TableRow>
         <TableRow>
             <TextView
                 android:text="배우"/>
-            <TextView
+            <EditText
                 android:id="@+id/actors"/>
         </TableRow>
         <TableRow>
             <TextView
                 android:text="상영시간"/>
-            <TextView
+            <EditText
                 android:id="@+id/runningTime"/>
         </TableRow>
         <TableRow>
             <TextView
                 android:text="줄거리"/>
-            <TextView
+            <EditText
                 android:layout_height="wrap_content"
                 android:layout_width="300dp"
                 android:id="@+id/desc"/>
         </TableRow>
     </TableLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="수정"
-
-            android:id="@+id/modify"
-            android:onClick="modify"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="삭제"
-
-            android:id="@+id/delete"
-            android:onClick="delete"/>
-    </LinearLayout>
+        android:text="완료"
+        android:id="@+id/submit"
+        android:onClick="submit"/>
 </LinearLayout>
